--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
  <head>
   <title>Meta pixel test</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!--
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -14,15 +15,29 @@
 
 
 </script>
+-->
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KNZD2K46');</script>
+<!-- End Google Tag Manager -->
 
 </head>
  <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNZD2K46"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
 <p>Meta pixel test</p>
 <p><button id="pageViewButton">PageView</p>
 <p><button id="purchaseButton">Purchase</button></p>
 <p><button id="addToCartButton">Add to cart</button></p>
 
+  <!--
 <script type="text/javascript">
   $('#purchaseButton').click(function() {
     fbq('track', 'Purchase', {currency: "USD", value: 30.00, content_ids:["157852347"], content_type: "product"});
@@ -34,7 +49,7 @@
     fbq('track', 'AddToCart', {currency: "USD", value: 20.00});
   });
 </script>
-
+-->
 
 </body>
 </html>
